--- a/index.html
+++ b/index.html
@@ -221,7 +221,11 @@
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                    <div class="alert alert-info alert-dismissible fade show d-none my-alert" role="alert">
+                      <strong>Thankyou!</strong> Your message has been sent.
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                      <form name= "portfolio-contact-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -244,12 +248,13 @@
                             </div>
                           </div>
                           <div class="col-md-12 text-center my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" class="button button-a button-big button-rouded btn-kirim">Send Message</button>
+                            <button class="button button-a button-big button-rouded btn-loading d-none" type="button" disabled>
+                              <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                              Loading...
+                            </button>
                           </div>
                         </div>
                       </form>
@@ -325,6 +330,29 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycby8DA935Y6vHC3MD-6o8ReOY0quT2jl9EciNJM8kh9IU49CcCig9ERwhFv1iE1IVeDTjA/exec'
+  const form = document.forms['portfolio-contact-form'];
+  const btnKirim = document.querySelector('.btn-kirim');
+  const btnLoading = document.querySelector('.btn-loading');
+  const myAlert = document.querySelector('.my-alert');
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    btnLoading.classList.toogle('d-none');
+    btnKirim.classList.toogle('d-none');
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => {
+        btnLoading.classList.toogle('d-none');
+        btnKirim.classList.toogle('d-none');
+        myAlert.classList.toogle('d-none');
+        form.reset();
+        console.log('Success!', response);
+      })
+      .catch(error => console.error('Error!', error.message))
+  })
+  </script>
 
 </body>
 
