--- a/index.html
+++ b/index.html
@@ -340,13 +340,13 @@
 
   form.addEventListener('submit', e => {
     e.preventDefault()
-    btnLoading.classList.toogle('d-none');
-    btnKirim.classList.toogle('d-none');
+    btnLoading.classList.toggle('d-none');
+    btnKirim.classList.toggle('d-none');
     fetch(scriptURL, { method: 'POST', body: new FormData(form)})
       .then(response => {
-        btnLoading.classList.toogle('d-none');
-        btnKirim.classList.toogle('d-none');
-        myAlert.classList.toogle('d-none');
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        myAlert.classList.toggle('d-none');
         form.reset();
         console.log('Success!', response);
       })
