--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Java</span> <span class="pull-right">75%</span>
+                    <span>Java</span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Python</span> <span class="pull-right">50%</span>
+                    <span>Microsoft Office</span> <span class="pull-right">100%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>CorelDRAW</span> <span class="pull-right">100%</span>
                     <div class="progress">
@@ -165,7 +165,11 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            
+                <h5 class="title-left">
+                Education
+                </h5>
+                <br>
             <div class="resume-item">
               <h4><li>High School</li></h4>
               <ul>
@@ -198,6 +202,25 @@
               <h5>2019 - 2021</h5>
               <p><em>Pubdekdok Division (Publication, Decoration, and Documentation) Adiwiyata Cadre Organization of SMA Tunas Luhur</em></p>
               
+            </div>
+            <div class="title-box-2">
+                <h5 class="title-left">
+                Activity
+                </h5>
+                <br>
+            <div class="resume-item">
+              <h4><li>UKM Rekayasa Teknologi (Infinite)</li></h4>
+              <ul>
+              <h5><em>2022 - now</em></h5>
+              <p><em>Role Hacker</em></p>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4><li>UKMF UNYTech TV FT UNY</li></h4>
+              <ul>
+              <h5><em>2021 - Now</em></h5>
+              <p><em>Divisi Streaming</em></p>
+              </ul>
             </div>
                 </div>
           </div>
