--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p><span class="title-s">Name: </span> <span>Abdilah Azam</span></p>
                         <p><span class="title-s">Profile: </span> <span>College Student</span></p>
                         <p><span class="title-s">Email: </span> <span>abdilahazam10@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(62) 85 333 249 505</span></p>
+                        <p><span class="title-s">Phone: </span> <span>(+62) 85 333 249 505</span></p>
                       </div>
                     </div>
                   </div>
