--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> PROBOLINGGO, INDONESIA 67282</li>
-                        <li><span class="bi bi-phone"></span> (62) 85 333 249 505</li>
+                        <li><span class="bi bi-phone"></span> (+62) 85 333 249 505</li>
                         <li><span class="bi bi-envelope"></span> abdilahazam10@gmail.com</li>
                       </ul>
                     </div>
